fixed navbar issues on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,7 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/
 /* COLOR SCHEME */
 $cream: #ffffe3;
 $turquoise: #00a5a6;
+$turquoise-dark: rgba(0, 91, 99, 0.65);
 $hot-pink: #FF2468;
 $dark-gray: #464646;
 
@@ -495,3 +496,12 @@ a.hide-link {
 .codeivate-stats:hover .codeivate-wrap {
   border: 1px solid $turquoise;
 }
+
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+  background-color: $hot-pink;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: $cream;
+}
+
